# api/v1/user/dto.go
@@ -7,7 +7,7 @@ type WxUserFilter struct {
 	Grade    string `form:"grade" binding:"omitempty,max=64,min=1"`
 	Class    string `form:"class" binding:"omitempty,max=64,min=1"`
 	Identity string `form:"identity" binding:"omitempty,max=64,min=1"`
-	Role     string `form:"role" binding:"omitempty,max=64,min=1"`
+	School   string `form:"school" binding:"omitempty,max=64,min=1"`
 	request.PageInfo
 }
 
@@ -19,13 +19,12 @@ type WxUserResponse struct {
 }
 
 type WxUserNew struct {
-	Name       string `json:"name" binding:"required,min=1,max=64"`
-	Grade      string `json:"grade" binding:"omitempty,min=1,max=64"`
-	Class      string `json:"class" binding:"omitempty,min=1,max=64"`
-	Role       string `json:"role" binding:"required,min=1,max=64"`
-	Identity   string `json:"identity" binding:"required,min=1,max=64"`
-	ExpireDate string `json:"expire_date" binding:"required,min=1,max=64"`
-	UserID     int64  `json:"user" swaggerignore:"true"`
+	Name     string `json:"name" binding:"required,min=1,max=64"`
+	Grade    string `json:"grade" binding:"omitempty,min=1,max=64"`
+	Class    string `json:"class" binding:"omitempty,min=1,max=64"`
+	School   string `json:"school" binding:"required,min=1,max=64"`
+	Identity string `json:"identity" binding:"required,min=1,max=64"`
+	UserID   int64  `json:"user" swaggerignore:"true"`
 }
 
 type WxUserID struct {
